2011-09-13  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: add default router.

	* gen.cgi: remove get_hwaddr function.
	(Foo#slices): add check null.
	(Foo#net1): add default router.

2011-09-12  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* gen.cgi: rename test.cgi to gen.cgi.

2011-09-09  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi (Foo#hostname_post): add function. hostname
	(Foo#net_post): add write resolv.conf function.

2011-09-08  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi: delete unnecessary empty line.

	* list.html: follow my campany's checksheet (caption only)

2011-09-06  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: fix incorrect defalut value like System eth0

	* test.cgi (Foo#net_post): add network configuration.

	* list.html: add eth1, eth2 table.

2011-09-02  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: add eth0 table(ipv4 only)x

2011-08-18  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi (Foo#parse): detached of "url" and rhel6 depend array from test.cgi to cofig/ directory.

2011-08-12  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi (Foo#fw_post): fix firewall parsing routine.

2011-08-04  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi (Foo#parse): addselinux.

2011-08-03  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* test.cgi (Foo#main): add %post section generator method.

2011-08-02  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: add SELinux configuration

	* test.cgi (Foo#part): add clearpart.
	(Foo#part): change modify flag from checkbox to select field.


2011-08-01  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: rename odd param.

	* test.cgi (Foo#parse2): ディスクパーティション設定を追加。
	ちゃんとエラーチェックしなきゃ

	* list.html: add disk0.nomodify flag

2011-07-29  Hitoshi NAKAMORI  <nakj@trashbox.jp>

	* list.html: base packages are selected by default.
	add stylesheet.
	add disk0 partition table difinition.

	* test.cgi: add firewall parse routine.
